# Search_engine

./: README.md
v1/: CMakeLists.txt
v1/include/: file_parse.h  file_scanner.h  utils.h  web_parse.h
v1/src/: file_parse.cc  file_scanner.cc  main.cc  web_parse.cc
v2/Client/: client.cc
v2/Server/: CMakeLists.txt
v2/Server/include/: Acceptor.h  Non_copyable.h  Search_server.h  Socket.h  SocketIo.h  Task_queue.h  Tcp_connection.h  Threadpool.h  candidate_searcher.h  web_searcher.h
v2/Server/src/: Acceptor.cc  Eventloop.cc  Inetaddress.cc  Search_server.cc  Socket.cc  SocketIo.cc  Task_queue.cc  Tcp_connection.cc  Tcp_server.cc  Test.cc  a.out  web_searcher.cc
v3/Server/: CMakeLists.txt
v3/Server/include/: Eventloop.h  Inetaddress.h  LRUCache.h  Search_server.h  Socket.h  SocketIo.h  Tcp_server.h  main_cache.h  patch_register.h  web_searcher.h
v3/Server/src/: Eventloop.cc  LRUCache.cc  Main_cache.cc  Search_server.cc  Socket.cc  SocketIo.cc  Task_queue.cc  Tcp_connection.cc  Tcp_server.cc  Test.cc  Threadpool.cc  candidate_seacher.cc  main_cache.cc  web_searcher.cc
